--- a/app.json
+++ b/app.json
@@ -15,9 +15,12 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.emre09.aydinticaretodasi"
     },
     "android": {
+      "package": "com.emre09.aydin_ticaret_odasi",
+      "versionCode": 1,
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
@@ -25,6 +28,11 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "1c95c88f-61ad-4e3f-af7f-042cf932fa5d"
+      }
     }
   }
 }
