--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "aydin_ticaret_odasi_react_native",
-    "slug": "aydin_ticaret_odasi_react_native",
+    "name": "aydin_ticaret_borsasi_react_native",
+    "slug": "aydin_ticaret_borsasi_react_native",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -16,10 +16,10 @@
     ],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.emre09.aydinticaretodasi"
+      "bundleIdentifier": "com.emre09.aydinticaretborsasi"
     },
     "android": {
-      "package": "com.emre09.aydin_ticaret_odasi",
+      "package": "com.emre09.aydin_ticaret_borsasi",
       "versionCode": 1,
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
