--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "expo-web-browser": "~12.1.1",
     "moment": "^2.29.4",
     "react": "18.2.0",
-    "react-native": "0.71.3",
+    "react-native": "0.71.4",
     "react-native-marquee": "^0.5.0",
+    "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0"
