--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo": "~48.0.6",
     "expo-status-bar": "~1.4.4",
     "expo-web-browser": "~12.1.1",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.71.4",
