--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.71.6",
+    "react-native-calendars": "^1.1295.0",
     "react-native-marquee": "^0.5.0",
+    "react-native-paper": "^5.7.0",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
