--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-native": "0.71.6",
     "react-native-calendars": "^1.1295.0",
+    "react-native-check-box": "^2.1.7",
     "react-native-marquee": "^0.5.0",
     "react-native-paper": "^5.7.0",
     "react-native-render-html": "^6.3.4",
