--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-svg": "13.4.0"
+    "react-native-svg": "13.4.0",
+    "react-native-text-input-mask": "^3.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
