--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-check-box": "^2.1.7",
     "react-native-marquee": "^0.5.0",
     "react-native-paper": "^5.7.0",
+    "react-native-phone-number-input": "^2.1.0",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
