--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo": "~48.0.6",
     "expo-status-bar": "~1.4.4",
     "expo-web-browser": "~12.1.1",
+    "formik": "^2.2.9",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "react": "18.2.0",
@@ -32,7 +33,8 @@
     "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
     "react-native-text-input-mask": "^3.1.4",
-    "react-native-toast-message": "^2.1.6"
+    "react-native-toast-message": "^2.1.6",
+    "yup": "^1.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
