--- a/package.json
+++ b/package.json
@@ -26,13 +26,12 @@
     "react-native-calendars": "^1.1295.0",
     "react-native-check-box": "^2.1.7",
     "react-native-marquee": "^0.5.0",
+    "react-native-mask-input": "^1.2.3",
     "react-native-paper": "^5.7.0",
-    "react-native-phone-number-input": "^2.1.0",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
-    "react-native-text-input-mask": "^3.1.4",
     "react-native-toast-message": "^2.1.6",
     "yup": "^1.1.1"
   },
