--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "@homielab/react-native-auto-scroll": "^0.0.9",
+    "@react-native-async-storage/async-storage": "^1.18.1",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "axios": "^1.3.4",
@@ -25,6 +26,7 @@
     "react-native": "0.71.6",
     "react-native-calendars": "^1.1295.0",
     "react-native-check-box": "^2.1.7",
+    "react-native-maps": "1.3.2",
     "react-native-marquee": "^0.5.0",
     "react-native-mask-input": "^1.2.3",
     "react-native-paper": "^5.7.0",
@@ -33,8 +35,7 @@
     "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
     "react-native-toast-message": "^2.1.6",
-    "yup": "^1.1.1",
-    "react-native-maps": "1.3.2"
+    "yup": "^1.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
