--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@expo/webpack-config": "^18.0.1",
     "@homielab/react-native-auto-scroll": "^0.0.9",
     "@react-native-async-storage/async-storage": "^1.18.1",
     "@react-navigation/native": "^6.1.6",
@@ -23,6 +24,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.71.6",
     "react-native-calendars": "^1.1295.0",
     "react-native-check-box": "^2.1.7",
@@ -35,6 +37,7 @@
     "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
     "react-native-toast-message": "^2.1.6",
+    "react-native-web": "~0.18.10",
     "yup": "^1.1.1"
   },
   "devDependencies": {
