--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-toast-message": "^2.1.6",
     "react-native-web": "~0.18.10",
     "react-redux": "^8.0.5",
+    "react-scripts": "^5.0.1",
     "redux": "^4.2.1",
     "yup": "^1.1.1"
   },
