--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "yup": "^1.1.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "react-native-dotenv": "^3.4.8"
   },
   "private": true
 }
