--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native": "0.71.6",
     "react-native-calendars": "^1.1295.0",
     "react-native-check-box": "^2.1.7",
+    "react-native-element-dropdown": "^2.9.0",
     "react-native-maps": "1.3.2",
     "react-native-marquee": "^0.5.0",
     "react-native-mask-input": "^1.2.3",
