--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "expo-status-bar": "~1.4.4",
     "expo-web-browser": "~12.1.1",
     "formik": "^2.2.9",
+    "i18next": "^22.5.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^12.3.1",
     "react-native": "0.71.6",
     "react-native-calendars": "^1.1295.0",
     "react-native-check-box": "^2.1.7",
