--- a/app.json
+++ b/app.json
@@ -33,6 +33,9 @@
       "eas": {
         "projectId": "1c95c88f-61ad-4e3f-af7f-042cf932fa5d"
       }
-    }
+    },
+    "plugins": [
+      "expo-localization"
+    ]
   }
 }
