--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "react-redux": "^8.0.5",
     "react-scripts": "^5.0.1",
     "redux": "^4.2.1",
-    "yup": "^1.1.1"
+    "yup": "^1.1.1",
+    "expo-localization": "~14.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
